changes for styling

--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@ Variables
 
 :root {
   /* dark shades of primary color*/
-  --clr-primary-1: hsl(205, 86%, 17%);
+  --clr-primary-1: #1569a5;
   --clr-primary-2: hsl(205, 77%, 27%);
   --clr-primary-3: hsl(205, 72%, 37%);
   --clr-primary-4: hsl(205, 63%, 48%);
   /* primary/main color */
-  --clr-primary-5: hsl(205, 78%, 60%);
+  --clr-primary-5: #1569a5;
   /* lighter shades of primary color */
   --clr-primary-6: hsl(205, 89%, 70%);
   --clr-primary-7: hsl(205, 90%, 76%);
@@ -88,6 +88,7 @@ h2 {
 }
 h3 {
   font-size: 1.25rem;
+  color: #1569a5 !important;
 }
 h4 {
   font-size: 0.875rem;
@@ -124,7 +125,7 @@ p {
 .btn {
   text-transform: uppercase;
   background: var(--clr-primary-5);
-  color: var(--clr-primary-1);
+  color: white;
   padding: 0.375rem 0.75rem;
   letter-spacing: 1px;
   display: inline-block;
@@ -171,6 +172,7 @@ h3 {
   text-transform: uppercase;
   color: var(--clr-primary-1);
 }
+
 .lorem-form {
   text-transform: capitalize;
   letter-spacing: var(--spacing);
